--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> 
     <title>Library</title>
 </head>
 <body>
-    <header class="header">
+    <div class="header">
         <div id="Name">Library</div>
-    </header>
+    </div>
     <main class="content">
         <div class="buttons">
             <button id="add">Add</button>
@@ -19,7 +20,7 @@
 
         </div>
     </main>
-    <div class="Add-Modal">
+    <div class="add-modal">
         <form action="/" method="post">
             <label for="book-name">name of the book</label>
             <input type="text" id="book-name" name="book-name">
@@ -32,6 +33,7 @@
         </form>
         <button type="submit">Submit</button>
     </div>
-    <footer class="footer">Made by Mohamed28875701</footer>
+    <div class="footer">Made by Mohamed28875701</div>
 </body>
+<script src="script.js"></script>
 </html>
