added a book card to use for styling purposes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
             
         </div>
         <div class="book-display">
-
+            <div class="card">
+                <div>blah</div>
+                <div>Authors name</div>
+                <div>number of pages</div>
+                <button id="read">read</button>
+                <button id="del">delete book</button>
+            </div>
         </div>
     </main>
     <div class="add-modal">
